ADD Lectura segura mediante InputStream compatible con JAR de Docker